[package]
name = "fxsnapshot"
version = "0.1.0"
authors = ["Jim Blandy <jimb@mozilla.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jimblandy/fxsnapshot"
description = "Command-line tool for querying Firefox heap snapshots."
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
lalrpop-util = "0.16.0"
memmap = "0.6.2"
regex = "1.0"

[dependencies.quick-protobuf]
version = "0.8.0"
features = [ "std" ]

[dependencies.fallible-iterator]
git = "https://github.com/sfackler/rust-fallible-iterator.git"
rev = "11ea3bf0e6ad2bc4f4fe220d6c3332942e5dfa35"

[build-dependencies]
lalrpop = "0.16.0"
pb-rs = "0.9.1"
